--- a/index.html
+++ b/index.html
@@ -250,7 +250,7 @@
     // Array berisi credential yang valid
     const validCredentials = [
       { username: 'Xezmods', password: 'Xezmods' },
-      { username: 'admin', password: 'admin123' },
+      { username: 'agus', password: 'agus123' },
       { username: 'user', password: 'userpass' }
     ];
 
